# SimpleSIMDMathLibrary

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  codeql-analysis.yml  coverage.yml
bench/: CMakeLists.txt  main.cpp
include/: Matrix.h  Matrix.inl  Matrix_r2f.h  Matrix_r2f.inl  Matrix_r3f.h  Matrix_r3f.inl  Matrix_r4f.h  Matrix_r4f.inl
test/: CMakeLists.txt  test_matrix.cpp  test_matrix2.cpp  test_matrix3.cpp  test_matrix4.cpp
